--- a/_config.yml
+++ b/_config.yml
@@ -6,25 +6,25 @@
 # --- Required options --- #
 
 # Name of website
-title: Bonbons Friend Home
+title: Bonbon's Friends Home
 
 # Your name to show in the footer
-author: Bonbons Mom
+author: Bonbon's Moms
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+    - Dog Food Calculator: "https://furrybuddies.github.io/woof/2021-12-29-how-much-your-doggie-needs-to-eat/"
+
+  Bonbon's instagram: "https://www.instagram.com/bonbon.the.westie/"
 
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+avatar: "/assets/img/Bonbon_friend.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
