--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ post_search: true
 
 navbar-col: "#F0F8FF"
 navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
+navbar-border-col: "#F0F8FF"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
